Fix header-content section to wrap appropraitely

--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,10 @@ header h2{
 .header-content{
     display:flex;
     padding: 30px 0px;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     background: #1f2937;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
 }
 
 .header-content .text{
@@ -71,11 +72,20 @@ header h2{
     color: #f9faf8;
 }
 
+.other{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .placeholder{
     display: flex;
-    align-items: center;
     justify-content: center;
-    background: rgb(187, 187, 187);
+    align-items: center;
+    background-color: grey;
+    border-radius: 5px;
+    height: 200px;
+    width: 400px;
 }
 
 .header-content p{
@@ -89,6 +99,7 @@ header h2{
     padding: 10px;
     background-color: rgb(56, 130, 246);
     border: none;
+    flex: 1;
 }
 
 
@@ -107,8 +118,7 @@ header h2{
 
 .random-info h2{
     text-align: center;
-    /* margin-top: 20px; */
-    padding-top: 20px;
+    padding: 25px 0;
 }
 .card{
    width: 200px;
@@ -139,6 +149,7 @@ header h2{
     justify-content: center;
     align-items: center;
     margin-top: 40px;
+    padding: 25px 0;
 }
 
 .quote-text{
